Proyecto2/fac-Agronomia/kb8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-app
  template:
    metadata:
      labels:
        app: grpc-app
    spec:
      containers:
        - name: grpc-client
          image: sezamora2/grpc-client:latest
          ports:
            - containerPort: 8080
        - name: grpc-server
          image: sezamora2/grpc-server:latest
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 50051
      targetPort: 50051
      name: grpc
  selector:
    app: grpc-app
